Closed Bug 450187 Opened 16 years ago Closed 16 years ago

"nsNTLMAuthModule.cpp(827) : warning C4390: ';' : empty controlled statement found; is this the intent?"

Categories

(Core :: Security: PSM, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla1.9.1a2

People

(Reporter: sgautherie, Assigned: sgautherie)

Details

Attachments

(1 file)

[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9.1a2pre) Gecko/20080811184452 Minefield/3.1a2pre] (home, optim default) (W2Ksp4)

{{
.../security/manager/ssl/src/nsNTLMAuthModule.cpp(827) : warning C4390: ';' : empty controlled statement found; is this the intent?
}}

Similar to bug 450177 case.
Flags: in-testsuite-
[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9.1a2pre)
Gecko/20080811184452 Minefield/3.1a2pre] (home, optim default) (W2Ksp4)

If you don't like the |#ifdef|,
adding brackets to the |if()| would fix it too.
Assignee: kaie → sgautherie.bz
Status: NEW → ASSIGNED
Attachment #333318 - Flags: review?(jgmyers)
Comment on attachment 333318 [details] [diff] [review]
(Av1) <nsNTLMAuthModule.cpp>
[Checkin: Comment 4]

I don't like the #ifdef, the approach with the brackets seems more elegant to me.

r+ on a new patch that changes it to

if
{
  LogToken
}
Attachment #333318 - Flags: review?(jgmyers) → review-
Comment on attachment 333318 [details] [diff] [review]
(Av1) <nsNTLMAuthModule.cpp>
[Checkin: Comment 4]

I take that back, since this is strictly logging only code.

r=kaie on this patch
Attachment #333318 - Flags: review- → review+
Keywords: checkin-needed
Pushed to mozilla-central:
http://hg.mozilla.org/mozilla-central/index.cgi/rev/613414852468
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Attachment #333318 - Attachment description: (Av1) <nsNTLMAuthModule.cpp> → (Av1) <nsNTLMAuthModule.cpp> [Checkin: Comment 4]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: