Bug 450187 – "nsNTLMAuthModule.cpp(827) : warning C4390: ';' : empty controlled statement found; is this the intent?" (Av1) <nsNTLMAuthModule.cpp>