security/manager/ssl/src/nsNTLMAuthModule.cpp
@@ -821,8 +821,10 @@ nsNTLMAuthModule::GetNextToken(const void *inToken,
     rv = GenerateType1Msg(outToken, outTokenLen);
   }
 
+#ifdef PR_LOGGING
   if (NS_SUCCEEDED(rv))
     LogToken("out-token", *outToken, *outTokenLen);
+#endif
 
   return rv;
 }
